<resources>
    <string name="app_name" translatable="false">Nilebot</string>
    <string name="sing_in">Login</string>
    <string name="hello_nile_bot">Welcome To Nilebot</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="have_no_acc">Do not have an account ?</string>
    <string name="create_new_acc">Create new account </string>
    <string name="try_again">Try Again</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">Ok</string>
    <string name="text_loading">Loading</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="default_notification_channel_id">channel</string>
    <string name="error_occured">Error Occured</string>
    <string name="error_connection">No Internet Connection</string>
    <string name="error_email_invalid">invalid Email format</string>
    <string name="error_required">Required</string>
    <string name="error_password_invalid">Invalid password</string>
    <string name="error_confirm_password">Confirm password does not match</string>
    <string name="error_phone_invalid">Phone number Invalid</string>
    <string name="error_accept_policy">You must accept the terms and conditions</string>
    <string name="error_password_not_match">Password Does not match</string>
    <string name="error_password_short">Password at least 8 characters</string>
    <string name="error_terms_invalid">You didn\'t agree the privacy policy</string>
    <string name="error_code_invalid">Invalid Code</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="oops">oops ! An un expected error occurred ,  we will fix it soon... </string>
    <string name="restart_app">Restart App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_up">Register</string>
    <string name="name">Name</string>
    <string name="farm_name">Farm / Comapny name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="accept_terms"><u><![CDATA[Accept terms & conditions]]></u></string>
    <string name="please_enter_number">Please enter your phone number to send code</string>
    <string name="send">Send</string>
    <string name="please_enter_code">Please Enter code</string>
    <string name="please_enter_code_sent">Please enter code send to your mobile to confirm account</string>
    <string name="still">Still</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="farms">Farms</string>
    <string name="no_farms">No farms , add a farm</string>
    <string name="add_farm">Add farm</string>
    <string name="language">Language</string>
    <string name="enter_sequence_number">Enter Sequence number</string>
    <string name="logout">Logout</string>
    <string name="arabic">اللغة العربية</string>
    <string name="english">English</string>
    <string name="add_sequence_number">Add sequence number</string>
    <string name="farm_namee">Farm name</string>
    <string name="farm_type">Farm type</string>
    <string name="country_governrate">Country - Governament</string>
    <string name="location_on_map">Farm location</string>
    <string name="choose_measure_unit">Choose measure unit</string>
    <string name="meter">M²</string>
    <string name="km">Km²</string>
    <string name="acre">Acre</string>
    <string name="area">Farm area</string>
    <string name="choose_location">Choose location</string>
    <string name="google_maps_key_api" translatable="false">API_MAP_KEY</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_serial_inside">No Devices ,Create device inside pool</string>
    <string name="add_serial">Create</string>
    <string name="add_pond">Add pond</string>
    <string name="pond_name">Pond Name</string>
    <string name="pond_name_colon">Pond Name : </string>
    <string name="pond_type">Pond type</string>
    <string name="next">Next</string>
    <string name="choose_farm_type">Choose Farm Type</string>
    <string name="readings">Reads</string>
    <string name="co">C°</string>
    <string name="server_error">Server error</string>
    <string name="error_email_or_password">Invalid email or password</string>
    <string name="you_must_accept_terms">I accept terms and conditions</string>
    <string name="error_name_invalid">Name should contains at least 4 character</string>
    <string name="error_signup">Invalid</string>
    <string name="farm_added">Farm Added successfully</string>
    <string name="no_ponds">No ponds yet , please add a pond</string>
    <string name="size">Size</string>
    <string name="pond_shape">Pond Shape</string>
    <string name="rectangle">Rectangular/ Square</string>
    <string name="cylinder">Cylinder</string>
    <string name="length">Length (in meter)</string>
    <string name="width">Width (in meter)</string>
    <string name="height">Depth (in meter)</string>
    <string name="diameter">Diameter (in meter)</string>
    <string name="is_there_aerationEquipment">Is there any aeration equipement?</string>
    <string name="pond_count">Ponds Count</string>
    <string name="choose_pond_type">Choose Pond type</string>
    <string name="water_type">Water Source type</string>
    <string name="fish_type">Fish species</string>
    <string name="fish_count_in_pond">Number of fishes per pond</string>
    <string name="feed_type">Fish feed type</string>
    <string name="choose_fish_feed">Choose fish feed type</string>
    <string name="edit">Save</string>
    <string name="phone_number_email">Phone / Email</string>
    <string name="no_sensors">No Measurement point Yet , add measurement point</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="sure_to_delete_sensor">Sure To delete this sensor</string>
    <string name="excel_exported">File Exported</string>
    <string name="time_start">Start time</string>
    <string name="time_end">End time</string>
    <string name="sensors">Sensors</string>
    <string name="filter">Filter</string>
    <string name="error_sensors_required">Sensors Required</string>
    <string name="error_sensors_date">end time after start time</string>
    <string name="no_readings">No Readings</string>
    <string name="error_permission">Enable Write permission from app settings</string>
    <string name="threshold_max">Maximum </string>
    <string name="min_threshold">Minimum </string>
    <string name="add">Add</string>
    <string name="sensor_updated">Sensor Updated</string>
    <string name="error_max">Maximum should be higher than Minimum</string>
    <string name="no_notifications">No notifications</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Save Profile</string>
    <string name="country_prompt">Choose a country</string>
    <string name="country">Country</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="ponds">Ponds</string>
    <string name="new_farm">New Farm</string>
    <string name="new_pond">New Pond</string>
    <string name="edit_farm">Save Farm</string>
    <string name="edit_pond">Save Pond</string>
    <string name="create_serial">Create Serial</string>
    <string name="sure_to_pond">Are you sure to delete this pond</string>
    <string name="sure_to_delete_farm">. Are you sure you want to delete this farm? \n (All ponds inside will be permanently deleted)
</string>
    <string name="farm_location">Farm Location</string>
    <string name="save_location">Save Location</string>
    <string name="sensor_reads">Sensor Reads</string>
    <string name="add_sensor_thresholds">Add Sensor Thresolds</string>
    <string name="add_serial_btn">Add Device</string>
    <string name="devices">Devices</string>
    <string name="setial_number">Serials</string>
    <string name="sure_to_logout">Are you sure to logout</string>
    <string name="disconnected">Disconnected</string>
    <string name="chart">Chart</string>
    <string name="notifications">Notifications</string>
    <string name="sensor_num">Sensor Num :</string>
    <string name="edit_bots">Save Bots</string>
    <string name="rate">Readings send rate per minutes</string>
    <string name="time_zone">Time Zone</string>
    <string name="bot">Bot</string>
    <string name="id">ID</string>
    <string name="add_bot">Add Bot</string>
    <string name="error_rate">rate must not be zero</string>
    <string name="choose_time_zone">Choose Time zone</string>
    <string name="token">Token</string>
    <string name="sw">SW : </string>
    <string name="hw">HW :</string>
    <string name="add_devices">Add Devices</string>
    <string name="summary">Summary</string>
    <string name="average">Average</string>
    <string name="no_data_to_export">No Data to export</string>
    <string name="filter_by_sensors">Filter by Sensors</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="add_phone">Add phone</string>
    <string name="edit_phone">Save Phone</string>
    <string name="sure_to_delete_phone">Are you sure to delete this phone ?</string>
    <string name="sure_to_delete_bot">Are you sure to delete this device ?</string>
    <string name="country_code_required">Country code required</string>
    <string name="add_phone_numbers">Add Phone numbers</string>
    <string name="no_data">No Reading</string>
    <string name="sing_up_new_acc">Register</string>
    <string name="no_phones">No Phones,Add Phone number </string>
    <string name="add_device">Add device</string>
    <string name="session_expired">Session expired</string>
    <string name="edit_sensor_thresholds">Save Sensor Thresolds</string>
    <string name="exit">Exit</string>
    <string name="sure_to_exit">Are you sure to exit ?</string>
    <string name="error">Error</string>
    <string name="please_enter_new_password">Enter you new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="choose_unit_type">Choose unit</string>
    <string name="all">All</string>
    <string name="fish_count_required">Number of fish required</string>
    <string name="fish_count">Number of fish per pond</string>
    <string name="add_more">Add More</string>
    <string name="pond_add_successfully">Pond successfully added!</string>
    <string name="no_ponds_found">No ponds found</string>
    <string name="sensor_name">Sensor name</string>
    <string name="choose_bot">Choose Device</string>
    <string name="choose_sensor">Choose Sensor</string>
    <string name="edit_sensor">Save Parameter</string>
    <string name="add_parameter">Add Parameter</string>
    <string name="edit_name">Save Name</string>
    <string name="hint">Hint</string>
    <string name="email_verify">Please check your mail and verify then press Ok</string>
    <string name="edit_email">Save Email</string>
    <string name="edit_number">Save Phone</string>
    <string name="device">Device</string>
    <string name="sensor">Sensor</string>
    <string name="password_chagne_success">Password change Successfully</string>
    <string name="dear_farmer">Dear Partner \nThe accuracy of recording the different parameters for each pond leads us to guide you to the best aquaculture practices for achieving high levels of production through the farming cycle
</string>
</resources>