<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:id="@+id/view_sep"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/layout_toolbar"
        android:background="#0256A3">


        <TextView
            android:id="@+id/txt_edit_pond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/default_16"
            android:layout_marginTop="@dimen/default_16"
            android:fontFamily="@font/questv1"
            android:text="@string/add_pond"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <ScrollView
        android:id="@+id/scroll_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7fafc"
        tools:context=".features.home.farms.addFarm.AddFarmFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/default_16"
            android:paddingEnd="@dimen/default_16">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dear_farmer"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <TextView
                style="@style/font_blue_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pond_name"
                android:textSize="@dimen/default_16" />


            <EditText
                android:id="@+id/edt_pond_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_view_white_stroke_gray"
                android:drawablePadding="5dp"
                android:fontFamily="@font/questv1"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <TextView
                android:id="@+id/txt_error_pond_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_16"
                android:fontFamily="@font/questv1"
                android:textColor="@color/red"
                android:visibility="gone" />


            <TextView
                style="@style/font_blue_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pond_type"
                android:textSize="@dimen/default_16" />


            <Spinner
                android:id="@+id/spinner_pond_type"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_16"
                android:background="@drawable/spinner_custom" />

            <TextView
                android:id="@+id/txt_error_pond_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_16"
                android:fontFamily="@font/questv1"
                android:textColor="@color/red"
                android:visibility="gone" />


            <TextView
                style="@style/font_blue_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pond_shape"
                android:textSize="@dimen/default_16" />


            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbtn_rectangle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rectangle" />

                <RadioButton
                    android:id="@+id/rdbtn_cylinder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/cylinder" />


            </RadioGroup>


            <LinearLayout
                android:id="@+id/lay_length_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/font_blue_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/length"
                    android:textSize="@dimen/default_16" />

                <EditText
                    android:id="@+id/edt_length"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:maxLength="9"
                    android:background="@drawable/round_view_white_stroke_gray"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/questv1"
                    android:inputType="numberDecimal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

                <TextView
                    android:id="@+id/txt_error_pond_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/default_16"
                    android:fontFamily="@font/questv1"
                    android:textColor="@color/red"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_width"
                style="@style/font_blue_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/width"
                android:textSize="@dimen/default_16" />

            <EditText
                android:id="@+id/edt_width"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:maxLength="9"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_view_white_stroke_gray"
                android:drawablePadding="5dp"
                android:fontFamily="@font/questv1"
                android:inputType="numberDecimal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <TextView
                android:id="@+id/txt_error_pond_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_16"
                android:fontFamily="@font/questv1"
                android:textColor="@color/red"
                android:visibility="gone" />


            <TextView
                style="@style/font_blue_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/height"
                android:textSize="@dimen/default_16" />

            <EditText
                android:id="@+id/edt_height"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:maxLength="9"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_view_white_stroke_gray"
                android:drawablePadding="5dp"
                android:fontFamily="@font/questv1"
                android:inputType="numberDecimal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <TextView
                android:id="@+id/txt_error_pond_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_16"
                android:fontFamily="@font/questv1"
                android:textColor="@color/red"
                android:visibility="gone" />


            <TextView
                style="@style/font_blue_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/is_there_aerationEquipment"
                android:textSize="@dimen/default_16" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbtn_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_yes" />

                <RadioButton
                    android:id="@+id/rdbtn_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/text_no" />


            </RadioGroup>


            <TextView
                android:id="@+id/txt_error_pond_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_16"
                android:fontFamily="@font/questv1"
                android:textColor="@color/red"
                android:visibility="gone" />


            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/round_corner_button_blue"
                android:fontFamily="@font/questv1"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

