<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/nilebot_logo" />

        <TextView
            android:id="@+id/tv_info_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/disconnected"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_extra_info_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/error_connection"
            android:textAlignment="center"
            android:textColor="@color/colorGray"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_16"
            android:background="@drawable/round_corner_button_blue"
            android:paddingStart="@dimen/default_16"
            android:paddingEnd="@dimen/default_16"
            android:text="@string/text_ok"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.cardview.widget.CardView>