<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"

    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/lay_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txt_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/questv1"
            android:text="@string/add_phone"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_16"
        android:orientation="vertical">


        <TextView
            style="@style/font_text_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_16"
            android:text="@string/phone_number" />


        <LinearLayout
            android:layout_width="270dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/lay_rel"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <Spinner
                    android:id="@+id/spinner_country_code"
                    android:layout_width="70dp"
                    android:layout_height="47dp"
                    android:spinnerMode="dialog"
                    android:layout_margin="8dp" />

                <EditText
                    android:id="@+id/edt_code"
                    android:layout_width="70dp"
                    android:layout_height="47dp"
                    android:background="@drawable/round_view_white_stroke_gray"
                    android:editable="false"
                    android:gravity="center"
                    android:textColor="#78797a"
                    android:textSize="13sp" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/round_view_white_stroke_gray"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="15"
                android:paddingStart="8dp"
                android:hint="@string/phone_number"
                android:paddingEnd="8dp"
                android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/txt_error_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/default_16"
                    android:fontFamily="@font/questv1"
                    android:textColor="@color/red"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>






        <TextView
            style="@style/font_text_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_16"
            android:text="@string/language" />

        <RadioGroup
            android:id="@+id/radio_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/check_arabic"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/arabic" />

            <RadioButton
                android:id="@+id/check_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_16"
                android:text="@string/english" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_question"
            android:layout_marginTop="@dimen/default_16"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/default_16"
                android:foreground="?selectableItemBackground"
                android:background="@drawable/round_view_white_stroke_gray"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:foreground="?selectableItemBackground"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/default_16"
                android:background="@drawable/round_corner_button_blue"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>